--- a/package.json
+++ b/package.json
@@ -5,23 +5,29 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.6",
+    "@types/supertest": "^2.0.15",
+    "jest": "^29.7.0",
     "prisma": "^5.4.2",
+    "redis-commander": "^0.8.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
     "@types/bcryptjs": "^2.4.4",
     "@types/connect-pg-simple": "^7.0.1",
     "@types/cookie-parser": "^1.4.4",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
     "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.8",
@@ -43,6 +49,7 @@
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "redis": "^4.6.10",
+    "stripe": "^14.1.0",
     "zod": "^3.22.2"
   }
 }
